[package]
name = "https-speed"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "*", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
eyre = "*"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["env-filter", "fmt", "ansi", "local-time"] }
itertools = "*"

byteorder = "*"
libc = "*"
pcap = "*"
smoltcp = "*"
tls-parser = "*"

signalbool = "*"
termion = "*"
